# lemonsqueezy-py-api

./: .env  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
lemonsqueezy/: __init__.py  api.py  client.py  config.py  models.py  protocols.py
lemonsqueezy/api/: __init__.py  customer.py  errors.py  file.py  prices.py  product.py  store.py  user.py  variant.py
lemonsqueezy/models/: __init__.py  customer.py  file.py  prices.py  product.py  store.py  user.py  variant.py
tests/: conftest.py  test_api.py  test_client.py  test_config.py
tests/api/: test_customer.py  test_file.py  test_prices.py  test_product.py  test_store.py  test_user.py  test_variant.py
