[project]
name = "lemonsqueezy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "lemonsqueezy",
    "pytest>=8.3.3",
]

[tool.uv.sources]
lemonsqueezy = { workspace = true }
